--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -9,6 +15,16 @@ body {
 
 a {
   text-decoration: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
 }
 
 h1,
@@ -23,9 +39,11 @@ a {
   color: inherit;
 }
 
-ul,
-li {
+ul {
   list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+  display: flex;
 }
 
 button,
@@ -34,7 +52,39 @@ input {
   cursor: pointer;
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
+
+.container {
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.section-title {
+  margin-bottom: 72px;
+}
+
 /* header */
+.header-section .container {
+  display: flex;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -43,11 +93,18 @@ input {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-right: 76px;
 }
 .logo-web-black {
   color: #2e2f42;
 }
-
+.menu-list {
+  gap: 40px;
+}
+.menu-list,
+.menu-link {
+  padding: 24px 0;
+}
 .menu-link {
   font-weight: 500;
   color: #2e2f42;
@@ -63,6 +120,7 @@ address {
 .contacts {
   color: inherit;
 }
+
 #email:hover,
 #email:focus {
   color: #404bbf;
@@ -72,7 +130,14 @@ address {
 #phone:focus {
   color: #404bbf;
 }
+.address-list {
+  gap: 40px;
+}
 
+.address-list,
+.address-link {
+  padding: 24px 0;
+}
 .address-link:hover,
 .address-link:focus {
   color: #404bbf;
@@ -81,12 +146,17 @@ address {
 /* main */
 .intro {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 .intro-title {
   font-weight: 700;
+  max-width: 496px;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
   text-align: center;
   color: #fff;
 }
@@ -99,6 +169,13 @@ address {
   letter-spacing: 0.04em;
   color: #fff;
   background-color: #4d5ae5;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  min-width: 169px;
+  padding: 16px 32px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
 }
 
 .intro-button:hover,
@@ -114,13 +191,33 @@ address {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
+
+.info-list {
+  gap: 24px;
+}
+
+.info-item {
+  max-width: calc((100% - 72px) / 4);
+}
+
 .info-subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 /* Our Team */
@@ -136,8 +233,19 @@ address {
   text-align: center;
   color: #2e2f42;
 }
-.team-card {
+.team-list {
+  gap: 24px;
+}
+
+.team-item-card {
+  width: calc((100% - 72px) / 4);
   background-color: #fff;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  border-radius: 0 0 4px 4px;
+}
+.team-img {
+  margin-bottom: 32px;
 }
 .team-name {
   font-weight: 500;
@@ -146,9 +254,11 @@ address {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .team-profesion {
   text-align: center;
+  margin-bottom: 32px;
 }
 
 /* Our Portfolio */
@@ -161,6 +271,22 @@ address {
   text-align: center;
   color: #2e2f42;
 }
+.portfolio-list {
+  row-gap: 48px;
+  column-gap: 24px;
+  flex-wrap: wrap;
+}
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-block-info {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+}
+
 .portfolio-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -172,6 +298,8 @@ address {
 /* footer */
 .footer-section {
   background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -181,10 +309,13 @@ address {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-logo-web-white {
   color: #f4f4fd;
 }
 .footer-text {
   color: #f4f4fd;
+  max-width: 264px;
 }
