--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,8 @@ address {
   border-radius: 0 0 4px 4px;
 }
 .team-block-info {
-  padding: 32px 16px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .team-name {
   font-weight: 500;
@@ -274,7 +275,7 @@ address {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
-  margin-bottom: 8px;
+  margin-bottom: 72px;
 }
 .portfolio-list {
   row-gap: 48px;
@@ -298,6 +299,7 @@ address {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 /* footer */
